--- a/src/components/portfolio/Gallery.astro
+++ b/src/components/portfolio/Gallery.astro
@@ -13,16 +13,15 @@ const { images, title } = Astro.props;
 <section id="gallery" class="grid gap-4 pt-4">
     {
         images.map((image, index) => (
-            <div class="image-container relative overflow-hidden rounded-xl">
+            <div class="image-container relative">
                 <Image
                     src={image.imageUrl}
                     alt={image.alt || `${title} imagen ${index + 1}`}
                     width={1152}
                     height={648}
-                    class="rounded-xl"
                     loading="lazy"
                 />
-                <div class="absolute bottom-0 w-full bg-black bg-opacity-60 p-2 text-white text-sm">
+                <div class="w-full p-2 text-xs">
                     {image.alt}
                 </div>
             </div>
