--- a/src/components/navigation/NavDataContact.astro
+++ b/src/components/navigation/NavDataContact.astro
@@ -12,13 +12,14 @@ import AnchorLink from '../library/AnchorLink.astro';
         </AnchorLink>
     </p>
     <p class="flex-1 text-sm font-light text-center">
-        <AnchorLink href={`tel:${SITE_DATA_CONTACT.walink}`} variant="outline" class="block px-0">
+        <AnchorLink target="_blank" href={`${SITE_DATA_CONTACT.waLink}`} variant="outline" class="block px-0">
             {SITE_DATA_CONTACT.phone}
         </AnchorLink>
     </p>
     <p class="flex-1 text-sm font-light text-center">
         <AnchorLink
-            href={`https://wa.me/${SITE_DATA_CONTACT.walink}`}
+            target="_blank"
+            href={`${SITE_DATA_CONTACT.waLink}`}
             variant="outline"
             class="block px-0"
         >
