refactor(blog): update layout blog structure

--- a/src/components/blog/Header.astro
+++ b/src/components/blog/Header.astro
@@ -1,3 +1,22 @@
 ---
+import TextGradient from '../elements/TextGradient.astro';
 
+interface Props {
+    title: string;
+    description: string;
+}
+
+const { title, description } = Astro.props;
 ---
+
+<div class="mb-6">
+    <h1 class="text-4xl font-semibold lg:text-5xl">
+        <TextGradient class="from-neutral-300/80 to-neutral-500/70">
+            {title}
+        </TextGradient>
+    </h1>
+
+    <p class="mt-6 text-lg font-thin text-neutral-200 lg:w-8/12">
+        {description}
+    </p>
+</div>
