chore(home): add portfolio grid

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,12 @@
 ---
 import Cover from '../components/elements/Cover.astro';
 import Layout from '../layouts/Layout.astro';
+import PortfolioGrid from '../components/portfolio/Grid.astro';
 ---
 
 <Layout>
     <Cover />
+    <div class="w-11/12 max-w-6xl mx-auto">
+        <PortfolioGrid />
+    </div>
 </Layout>
