fix(cover): update profile image source to use Cloudinary URL

--- a/src/components/elements/Cover.astro
+++ b/src/components/elements/Cover.astro
@@ -6,7 +6,7 @@ import LinkOut from '../icons/Icons/LinkOut.astro';
 
 <section class="w-11/12 max-w-2xl mx-auto flex flex-col items-center justify-center my-36">
     <Image
-        src="/jenner.jpg"
+        src="https://res.cloudinary.com/dx2mmidgs/image/upload/v1757729658/jenner_acosta.png"
         alt="Jenner Acosta Díaz"
         width={150}
         height={150}
