--- a/src/components/blog/Cover.astro
+++ b/src/components/blog/Cover.astro
@@ -24,8 +24,9 @@ const { imageUrl, altText, author, publishDate } = Astro.props;
     />
 
     <div
-        class="absolute bottom-0 left-0 flex w-full items-center justify-between gap-4 bg-neutral-900/70 px-7 py-6 backdrop-blur-sm">
-        <div class="flex flex-wrap gap-8 sm:gap-16">
+        class="absolute bottom-0 left-0 flex w-full items-center justify-between gap-4 bg-neutral-900/70 px-6 md:px-7 py-3 md:py-6 backdrop-blur-sm"
+    >
+        <div class="w-full flex justify-between md:justify-start gap-8 sm:gap-16">
             <div class="flex flex-col gap-2">
                 <h3 class="text-sm text-neutral-300/90">Written By</h3>
                 <p class="font-semibold">{author}</p>
@@ -37,7 +38,9 @@ const { imageUrl, altText, author, publishDate } = Astro.props;
             </div>
         </div>
 
-        <ButtonCopyLink class="flex items-center gap-1 border px-2 py-1 hover:bg-neutral-800 cursor-pointer">
+        <ButtonCopyLink
+            class="hidden md:flex items-center gap-1 border px-2 py-1 hover:bg-neutral-800 cursor-pointer"
+        >
             <Copy size="xs" />
             <span class="text-xs">Copy Link</span>
         </ButtonCopyLink>
