--- a/src/components/blog/Card.astro
+++ b/src/components/blog/Card.astro
@@ -1,30 +1,62 @@
 ---
 import { CldImage } from 'astro-cloudinary';
-const { blog, class: className } = Astro.props;
+
+const { blog, class: className, style } = Astro.props;
 const id = blog.url.split('/').pop();
 const date = new Date(blog.frontmatter.date).toLocaleDateString('en-US', {
     day: '2-digit',
     month: 'short',
     year: 'numeric',
 });
+
+const cardStyles = {
+    portaid:
+        'grid grid-cols-1 sm:grid-cols-2 sm:flex-row rounded-2xl overflow text-neutral-100 bg-neutral-950/50',
+    default: 'flex flex-col rounded-2xl relative overflow-hidden text-neutral-100',
+};
 ---
+
 <article id={id} class:list={className}>
-    <a href={blog.url}
-       class="grid grid-cols-1 sm:grid-cols-2 sm:flex-row rounded-2xl overflow text-neutral-300/90 bg-neutral-950/50">
+    <a href={blog.url} class={cardStyles[style as keyof typeof cardStyles]} tabindex="0">
         <CldImage
             src={blog.frontmatter.imageCover}
             height={480}
             alt={blog.frontmatter.title}
-            class="object-cover !aspect-square rounded-tl-2xl rounded-tr-2xl sm:rounded-tr-none sm:rounded-bl-2xl"
+            class="object-cover !aspect-square rounded-tl-2xl rounded-tr-2xl sm:rounded-tr-none sm:rounded-bl-2xl transition-all duration-300 group-hover:scale-105 group-focus:scale-105"
             loading="eager"
         />
-        <div class="flex-1 p-8 flex flex-col justify-between">
-            <p class="font-light text-xs uppercase border-l border-primary-500 pl-2">{blog.frontmatter.category}</p>
-            <div class="flex flex-col gap-2">
-                <h2 class="text-3xl">{blog.frontmatter.title}</h2>
-                <p class="font-light">{blog.frontmatter.description}</p>
-            </div>
-            <p class="text-sm">{blog.frontmatter.author} · {date}</p>
-        </div>
+        {
+            style === 'portaid' && (
+                <div class="flex-1 p-8 flex flex-col justify-between">
+                    <p class="font-semibold text-xs uppercase border-l-4 border-primary-500 pl-3 tracking-wider text-primary-400 mb-2">
+                        {blog.frontmatter.category}
+                    </p>
+                    <div class="flex flex-col gap-2">
+                        <h2 class="text-3xl font-bold leading-tight text-white drop-shadow-sm">
+                            {blog.frontmatter.title}
+                        </h2>
+                        <p class="font-light text-neutral-300/90">{blog.frontmatter.description}</p>
+                    </div>
+                    <p class="text-sm text-neutral-400 mt-4">
+                        {blog.frontmatter.author} · {date}
+                    </p>
+                </div>
+            )
+        }
+
+        {
+            style === 'default' && (
+                <div class="flex-1 p-6 flex flex-col justify-between absolute bottom-0 bg-gradient-to-t from-neutral-950 to-neutral-950/80 w-full">
+                    <div class="flex flex-col gap-2 mb-4">
+                        <h2 class="text-2xl font-bold leading-tight text-white drop-shadow-sm">
+                            {blog.frontmatter.title}
+                        </h2>
+                    </div>
+                    <p class="text-sm text-neutral-400">
+                        {blog.frontmatter.author} · {date}
+                    </p>
+                </div>
+            )
+        }
     </a>
 </article>
