--- a/src/components/blog/Grid.astro
+++ b/src/components/blog/Grid.astro
@@ -1,8 +1,19 @@
 ---
 import Card from './Card.astro';
-const allBlogs = Object.values(import.meta.glob('../../pages/blog/*.md', { eager: true }));
+const allBlogs = Object.values(import.meta.glob('../../pages/blog/*.md', { eager: true })).sort(
+    (a: any, b: any) =>
+        new Date(b.frontmatter.date).getTime() - new Date(a.frontmatter.date).getTime()
+);
 ---
+
 <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 md:gap-6 lg:gap-8 my-16">
-    {allBlogs.map((blog: any) =>
-        <Card blog={blog} class="lg:col-span-3" />)}
+    {
+        allBlogs.map((blog: any, i: number) => (
+            <Card
+                blog={blog}
+                class={i === 0 ? 'lg:col-span-2' : ''}
+                style={i === 0 ? 'portaid' : 'default'}
+            />
+        ))
+    }
 </div>
