--- a/src/components/navigation/Header.astro
+++ b/src/components/navigation/Header.astro
@@ -5,7 +5,7 @@ import Navigation from './Navigation.astro';
 
 <header>
     <nav
-        class="w-11/12 max-w-6xl mx-auto flex items-center justify-center md:justify-between py-6 md:py-8"
+        class="w-11/12 max-w-6xl mx-auto flex items-center justify-between md:justify-center gap-4 md:justify-between py-6 md:py-8"
     >
         <Brand loading="eager" />
         <Navigation />
