fix(Header): simplify navigation layout by removing redundant class for improved clarity

--- a/src/components/navigation/Header.astro
+++ b/src/components/navigation/Header.astro
@@ -4,9 +4,7 @@ import Navigation from './Navigation.astro';
 ---
 
 <header>
-    <nav
-        class="w-11/12 max-w-6xl mx-auto flex items-center justify-between md:justify-center gap-4 md:justify-between py-6 md:py-8"
-    >
+    <nav class="w-11/12 max-w-6xl mx-auto flex items-center justify-between gap-4 py-6 md:py-8">
         <Brand loading="eager" />
         <Navigation />
     </nav>
