--- a/src/components/blog/Grid.astro
+++ b/src/components/blog/Grid.astro
@@ -11,7 +11,7 @@ const allBlogs = Object.values(import.meta.glob('../../pages/blog/*.md', { eager
         allBlogs.map((blog: any, i: number) => (
             <Card
                 blog={blog}
-                class={i === 0 ? 'lg:col-span-2' : ''}
+                class={i === 0 ? 'sm:col-span-2' : ''}
                 style={i === 0 ? 'portaid' : 'default'}
             />
         ))
