fix(Index): add Grid component to enhance blog layout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,13 @@
 import Cover from '../components/elements/Cover.astro';
 import Layout from '../layouts/Layout.astro';
 import PortfolioGrid from '../components/portfolio/Grid.astro';
+import Grid from '../components/blog/Grid.astro';
 ---
 
 <Layout>
     <Cover />
     <div class="w-11/12 max-w-6xl mx-auto">
         <PortfolioGrid />
+        <Grid />
     </div>
 </Layout>
