--- a/src/layouts/MarkdownBlogLayout.astro
+++ b/src/layouts/MarkdownBlogLayout.astro
@@ -19,10 +19,7 @@ const date: string = new Date(frontmatter.date).toLocaleDateString('en-US', {
 <Layout title={frontmatter.title} description={frontmatter.description} image={coverUrl}>
     <section class="w-11/12 max-w-4xl mx-auto my-12 text-neutral-300/80 flex flex-col gap-12">
         <div class="flex flex-col gap-6">
-            <Header
-                title={frontmatter.title}
-                description={frontmatter.description}
-            />
+            <Header title={frontmatter.title} description={frontmatter.description} />
 
             <Cover
                 imageUrl={coverUrl}
