--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ import Footer from '../components/navigation/Footer.astro';
 import Analytics from '@vercel/analytics/astro';
 import SpeedInsights from '@vercel/speed-insights/astro';
 
-const { title, description, image } = Astro.props;
+const { title, description, image, lang } = Astro.props;
 
 const pageTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
 const pageDescription = description || SITE_DESCRIPTION;
@@ -16,15 +16,15 @@ const ogImage = image || SITE_IMAGE;
 ---
 
 <!doctype html>
-<html lang="en">
-<head>
-    <BaseHead title={pageTitle} description={pageDescription} image={ogImage} />
-</head>
-<body class="bg-neutral-900 text-neutral-300">
-<Header />
-<slot />
-<Footer />
-<Analytics />
-<SpeedInsights />
-</body>
+<html lang={lang}>
+    <head>
+        <BaseHead title={pageTitle} description={pageDescription} image={ogImage} />
+    </head>
+    <body class="bg-neutral-900 text-neutral-300">
+        <Header />
+        <slot />
+        <Footer />
+        <Analytics />
+        <SpeedInsights />
+    </body>
 </html>
