feat(i18n): update Navigation component to use localized URLs for Blog and Portfolio links

--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -1,8 +1,11 @@
 ---
+import { getRelativeLocaleUrl } from 'astro:i18n';
 import NavLink from './NavLink.astro';
+const blogUrl = getRelativeLocaleUrl('en', '/blog');
+const portfolioUrl = getRelativeLocaleUrl('en', '/portfolio');
 ---
 
 <nav class="flex items-center gap-4">
-    <NavLink href="/blog">Blog</NavLink>
-    <NavLink href="/portfolio">Portfolio</NavLink>
+    <NavLink href={blogUrl}>Blog</NavLink>
+    <NavLink href={portfolioUrl}>Portfolio</NavLink>
 </nav>
