feat(i18n): update Cover component to use dynamic greeting, description, and button URL

--- a/src/components/elements/Cover.astro
+++ b/src/components/elements/Cover.astro
@@ -2,6 +2,8 @@
 import Image from 'astro/components/Image.astro';
 import AnchorLink from '../library/AnchorLink.astro';
 import LinkOut from '../icons/Icons/LinkOut.astro';
+
+const { greeting, description, buttonText, buttonUrl } = Astro.props;
 ---
 
 <section class="w-11/12 max-w-2xl mx-auto flex flex-col items-center justify-center my-36">
@@ -13,15 +15,14 @@ import LinkOut from '../icons/Icons/LinkOut.astro';
         class="rounded-full"
         loading="eager"
     />
-    <p class="text-small font-light my-4">Hi, I'm Jenner 👋</p>
+    <p class="text-small font-light my-4">{greeting}</p>
     <h1
         class="text-4xl font-light text-center bg-gradient-to-r from-neutral-300 to-neutral-700 inline-block text-transparent bg-clip-text"
     >
-        Software Developer passionate about crafting innovative solutions and delightful user
-        experiences
+        {description}
     </h1>
-    <AnchorLink href="/portfolio" class="mt-10 flex items-center gap-2">
-        Latest Projects
+    <AnchorLink href={buttonUrl} class="mt-10 flex items-center gap-2">
+        {buttonText}
         <LinkOut size="xs" />
     </AnchorLink>
 </section>
