--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,12 +7,15 @@ import Header from '../components/navigation/Header.astro';
 import Footer from '../components/navigation/Footer.astro';
 import Analytics from '@vercel/analytics/astro';
 import SpeedInsights from '@vercel/speed-insights/astro';
+import { getLangFromUrl } from '../i18n/utils';
 
-const { title, description, image, lang } = Astro.props;
+const { title, description, image } = Astro.props;
 
 const pageTitle = title ? `${title} | ${SITE_TITLE}` : SITE_TITLE;
 const pageDescription = description || SITE_DESCRIPTION;
 const ogImage = image || SITE_IMAGE;
+
+const lang = getLangFromUrl(Astro.url);
 ---
 
 <!doctype html>
