feat(i18n): update LanguagePicker to use dynamic routing for language links

--- a/src/components/navigation/LanguagePicker.astro
+++ b/src/components/navigation/LanguagePicker.astro
@@ -1,10 +1,11 @@
 ---
 import { languages } from '../../i18n/ui';
+import { getRouteFromUrl } from '../../i18n/utils';
 import { getLangFromUrl, useTranslatedPath } from '../../i18n/utils';
 
 const lang = getLangFromUrl(Astro.url);
+const route = getRouteFromUrl(Astro.url);
 const translatePath = useTranslatedPath(lang);
-
 const langClass = (l: string) => (lang === l ? 'font-bold' : '');
 ---
 
@@ -12,7 +13,7 @@ const langClass = (l: string) => (lang === l ? 'font-bold' : '');
     {
         Object.entries(languages).map(([lang, label]) => (
             <li class={langClass(lang) + ' text-sm hover:underline'}>
-                <a href={translatePath('/', lang)}>{label}</a>
+                <a href={translatePath(`/${route ? route : ''}`, lang)}>{label}</a>
             </li>
         ))
     }
