feat(i18n): remove language attribute from Layout component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import PortfolioGrid from '../components/portfolio/Grid.astro';
 import BlogGrid from '../components/blog/Grid.astro';
 ---
 
-<Layout lang="en">
+<Layout>
     <Cover
         greeting="Hi, I'm Jenner 👋"
         description="Software Developer passionate about crafting innovative solutions and delightful user experiences"
