Refactor code style and formatting across multiple components and pages
- Updated package.json for consistent formatting.
- Added missing newlines in Header.astro, ButtonCopyLink.astro, and other components.
- Improved readability by formatting props and attributes in NavDataContact.astro, Header.astro, Navbar.astro, and Post.astro.
- Cleaned up markdown files for frontend vs backend and portfolio entries for better consistency.
- Adjusted global.css for proper syntax and formatting.

--- a/src/components/navigation/NavDataContact.astro
+++ b/src/components/navigation/NavDataContact.astro
@@ -12,7 +12,12 @@ import AnchorLink from '../library/AnchorLink.astro';
         </AnchorLink>
     </p>
     <p class="flex-1 text-sm font-light text-center">
-        <AnchorLink target="_blank" href={`${SITE_DATA_CONTACT.waLink}`} variant="outline" class="block px-0">
+        <AnchorLink
+            target="_blank"
+            href={`${SITE_DATA_CONTACT.waLink}`}
+            variant="outline"
+            class="block px-0"
+        >
             {SITE_DATA_CONTACT.phone}
         </AnchorLink>
     </p>
