--- a/src/components/portfolio/Gallery.astro
+++ b/src/components/portfolio/Gallery.astro
@@ -21,9 +21,7 @@ const { images, title } = Astro.props;
                     height={648}
                     loading="lazy"
                 />
-                <div class="w-full p-2 text-xs">
-                    {image.alt}
-                </div>
+                <div class="w-full p-2 text-xs">{image.alt}</div>
             </div>
         ))
     }
