--- a/src/components/portfolio/Navbar.astro
+++ b/src/components/portfolio/Navbar.astro
@@ -3,16 +3,21 @@ import Github from '../icons/Icons/Github.astro';
 import Image from 'astro/components/Image.astro';
 import type { Frontmatter } from '../../types/portfolio';
 
-type Props = Pick<Frontmatter, 'category' | 'date' | 'duration' | 'demoLink' | 'gitHub' | 'deepWiki'>;
+type Props = Pick<
+    Frontmatter,
+    'category' | 'date' | 'duration' | 'demoLink' | 'gitHub' | 'deepWiki'
+>;
 
 const { category, date, duration, demoLink, gitHub, deepWiki } = Astro.props;
 ---
 
 <aside
-    class="flex flex-col md:flex-row justify-between items-center gap-4 p-4 font-light text-xs bg-neutral-800 rounded-lg shadow-md outline-4 outline-neutral-400/15 hover:shadow-2xl hover:shadow-neutral-800 transition-shadow duration-500">
+    class="flex flex-col md:flex-row justify-between items-center gap-4 p-4 font-light text-xs bg-neutral-800 rounded-lg shadow-md outline-4 outline-neutral-400/15 hover:shadow-2xl hover:shadow-neutral-800 transition-shadow duration-500"
+>
     <nav class="flex gap-4 items-center">
         <span
-            class="bg-gradient-to-r from-primary-700 to-primary-500 text-neutral-300 text-xs font-light px-2 py-1 rounded-md">
+            class="bg-gradient-to-r from-primary-700 to-primary-500 text-neutral-300 text-xs font-light px-2 py-1 rounded-md"
+        >
             {category}
         </span>
         <p>{date} / {duration}</p>
@@ -25,7 +30,9 @@ const { category, date, duration, demoLink, gitHub, deepWiki } = Astro.props;
 
         {
             demoLink && (
-                <a href={demoLink} target="_blank">{demoLink}</a>
+                <a href={demoLink} target="_blank">
+                    {demoLink}
+                </a>
             )
         }
 
