--- a/src/components/portfolio/Post.astro
+++ b/src/components/portfolio/Post.astro
@@ -4,8 +4,10 @@ const { post } = Astro.props;
 ---
 
 <article>
-    <a href={post.url}
-       class="flex flex-col gap-4 p-4 cursor-pointer bg-neutral-800 rounded-lg shadow-md outline-4 outline-neutral-400/15 hover:shadow-2xl hover:shadow-neutral-800 transition-shadow duration-500">
+    <a
+        href={post.url}
+        class="flex flex-col gap-4 p-4 cursor-pointer bg-neutral-800 rounded-lg shadow-md outline-4 outline-neutral-400/15 hover:shadow-2xl hover:shadow-neutral-800 transition-shadow duration-500"
+    >
         <header class="relative">
             <CldImage
                 src={post.frontmatter.imageCover}
@@ -14,12 +16,13 @@ const { post } = Astro.props;
                 alt={post.frontmatter.title}
                 class="object-cover rounded-lg"
             />
-            {post.frontmatter.category && (
-                <span
-                    class="absolute top-2 left-2 bg-gradient-to-r from-primary-700 to-primary-500 text-neutral-300 text-xs font-light px-2 py-1 rounded-md">
-                    {post.frontmatter.category}
-                </span>
-            )}
+            {
+                post.frontmatter.category && (
+                    <span class="absolute top-2 left-2 bg-gradient-to-r from-primary-700 to-primary-500 text-neutral-300 text-xs font-light px-2 py-1 rounded-md">
+                        {post.frontmatter.category}
+                    </span>
+                )
+            }
         </header>
         <section class="flex flex-col gap-2 text-left">
             <h2 class="font-thin text-4xl">{post.frontmatter.title}</h2>
@@ -27,11 +30,13 @@ const { post } = Astro.props;
                 {post.frontmatter.description}
             </p>
             <ul class="flex flex-wrap gap-2 max-h-16 overflow-hidden">
-                {post.frontmatter.tech.map((item: string) => (
-                    <li class="text-neutral-400 text-sm font-light bg-neutral-700 px-2 py-1 rounded-md">
-                        {item}
-                    </li>
-                ))}
+                {
+                    post.frontmatter.tech.map((item: string) => (
+                        <li class="text-neutral-400 text-sm font-light bg-neutral-700 px-2 py-1 rounded-md">
+                            {item}
+                        </li>
+                    ))
+                }
             </ul>
         </section>
     </a>
